--- a/client/index.html
+++ b/client/index.html
@@ -51,6 +51,14 @@
         <script>
             const API_URL = "http://localhost:5000/api/users";
 
+            const clearInputFields = () => {
+                // clear form
+                    document.getElementById("name").value = "";
+                    document.getElementById("address").value = "";
+                    document.getElementById("phonenumber").value = "";
+                    document.getElementById("email").value = "";
+            }
+
             // handle form submit
             document.getElementById("userform").addEventListener("submit", async (e) => {
                 e.preventDefault();
@@ -61,19 +69,23 @@
                 
 
                 try {
+
+                    const data = {
+                        name,
+                        address,
+                        phonenumber,
+                        email
+                    }
+
                     const res = await fetch(API_URL + '/register', {
                         method: "POST",
                         headers: { "Content-Type": "application/json" },
-                        body: JSON.stringify({ name, address, phonenumber, email }),
+                        body: JSON.stringify(data),
                     });
 
                     if (!res.ok) throw new Error(`Server returned ${res.status}`);
-
-                    // clear form
-                    document.getElementById("name").value = "";
-                    document.getElementById("address").value = "";
-                    document.getElementById("phonenumber").value = "";
-                    document.getElementById("email").value = "";
+                    clearInputFields()
+                    
                     alert("user created successfully!");
                     loadUsers();
                 } catch (err) {
